# DerkLib

./: .gitignore  CMakeLists.txt  README.md  utility.sh
derklib/: CMakeLists.txt
derklib/includes/: foo.hpp
derklib/includes/algorithms/: matrix_algos.hpp  traversals.hpp
derklib/includes/containers/: graph.hpp
derklib/includes/mathematics/: matrices.hpp
derklib/includes/meta/: general.hpp  maths.hpp  typelist.hpp
derklib/src/: foo.cpp
tests/: CMakeLists.txt  test_foo.cpp  test_graphs.cpp  test_mat_basics.cpp  test_typelist.cpp
